--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Google Poppins Font */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+
+:root{
+  --logo-color: #ff8400;
+  --bg-black-900: #ffffff;
+  --border-color: #e9e9e9;
+  --bg-black-100: #d5b331;
+  --deep-theme-color: #e4ab44;
+  --light-theme-color: #f2d667;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+}
+.css-1swhdk4-MuiButtonBase-root-MuiIconButton-root:hover {
+  background-color: #d5b331;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
